--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,17 @@
-<h1> Hola Mundo</h1>
+<div class="row container mt-4">
+    <div class="col-3">
+      <h2>Busquedas</h2>
+      <hr>
+      <ul class="lis-group">
+        <li class="list-grop-item">Buscar por país</li>
+        <li class="list-grop-item">Buscar por región</li>
+        <li class="list-grop-item">Buscar por capital</li>
+      </ul>
+
+    </div>
+    <div class="col">
+      <h2>Por Capital</h2>
+      <hr>
+      <app-por-capital></app-por-capital>
+    </div>
+</div>
