Fin de de la sección 8

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,12 @@
 <div class="row container mt-4">
-    <div class="col-3">
-      <h2>Busquedas</h2>
-      <hr>
-      <ul class="lis-group">
-        <li class="list-grop-item">Buscar por país</li>
-        <li class="list-grop-item">Buscar por región</li>
-        <li class="list-grop-item">Buscar por capital</li>
-      </ul>
+
+  <div class="col-3">
+
+    <app-sidebar></app-sidebar>
 
     </div>
     <div class="col">
-      <h2>Por Capital</h2>
-      <hr>
-      <app-por-capital></app-por-capital>
+
+      <router-outlet></router-outlet>
     </div>
 </div>
