--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,1 +1,25 @@
-<p>por-capital works!</p>
+<h2>Por Capital</h2>
+<hr>
+
+
+  <div class="row">
+    <div class="col">
+     <app-pais-input
+      (onEnter)="buscar($event)"
+      placeholder="Buscar Capital..."
+      >
+    </app-pais-input>
+    </div>
+  </div>
+  <hr>
+
+<div *ngIf="hayError" class="alert alert-danger">
+   No se encontro el termino {{termino}}
+</div>
+
+
+<div *ngIf="!hayError" class="row">
+  <div class="col">
+   <app-pais-tabla [paises]=" paises" [hayError]="hayError"></app-pais-tabla>
+  </div>
+</div>
