--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -6,12 +6,30 @@
     <div class="col">
      <app-pais-input
       (onEnter)="buscar($event)"
-      (onDebounce)="sugerencias( $event )"
+      (onDebounce)="sugerencias($event)"
       placeholder="Buscar país..."
       >
     </app-pais-input>
     </div>
   </div>
+
+<ul class="list-group" *ngIf="mostrarSugerencias">
+  <li *ngFor="let pais of paisesSugeridos, let i = index"
+  class="list-group-item list-group-item-action">
+    <a class="nav-link"
+    [routerLink]="['/pais', pais.cca2]">
+    {{pais.name.official}}
+  </a>
+  </li>
+  <li *ngFor="let pais of paisesSugeridos, let i = index"
+  class="list-group-item list-group-item-action"
+  (click)="buscarSugerido(termino)">
+    <a class="nav-link">
+    Buscar {{termino | titlecase}}
+  </a>
+  </li>
+</ul>
+
   <hr>
 
 <div *ngIf="hayError" class="alert alert-danger">
