--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,26 @@
-<p>por-region works!</p>
+<h3>Buscar por región <small>{{regionActiva | titlecase}}</small></h3>
+
+<h5>Seleccione la región.</h5>
+<div class="row">
+  <div class="col">
+
+    <!-- [class.btn-primary] = "region === regionActiva"-->
+    <!-- ngClass="{
+      'btn-primary': regionActiva === region,
+      'btn-outline-primary': regionActiva !== region,
+    }"-->
+    <button class="animate__animated animate__jackInTheBox" *ngFor="let region of regiones"
+    [class]="getClassCSS(region)"
+    style="margin-right: 5px;"
+
+    (click) ="activarRegion(region)">
+        {{region | titlecase}}
+    </button>
+  </div>
+</div>
+<hr>
+<div *ngIf="!hayError" class="row">
+  <div class="col">
+   <app-pais-tabla [paises]="paises" [hayError]="hayError"></app-pais-tabla>
+  </div>
+</div>
