--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -15,10 +15,10 @@ Espere por favor...
     <h1>País: {{pais.name.official}}</h1>
     <hr>
   </div>
-<div class="row">
+<div class="row animate__animated animate__shakeX">
   <div class="col-4">
-    <h3>Bandera</h3>
-    <img [src]="pais.flags.svg" class="img-thumbnail"/>
+    <h3 class="animate__animated animate__bounce">Bandera</h3>
+    <img [src]="pais.flags.svg" class="img-thumbnail animate__flash animate__animated "/>
   </div>
 
   <div class="col">
@@ -31,7 +31,7 @@ Espere por favor...
         <strong> Código númerico: </strong> {{pais.ccn3 | number}}
       </li>
       <li class="list-group-items">
-        <strong> Código alpha3: </strong> {{pais.cca3}}
+        <strong> Código alpha3: </strong> {{pais.cca2}}
       </li>
     </ul>
 
@@ -43,14 +43,15 @@ Espere por favor...
     <hr>
       <div class="row">
         <div class="col">
-        <span class="badge bg-primary mr-1">{{pais.translations['ara'].official}}</span>
-        <span class="badge bg-primary mr-1">{{pais.translations['spa'].official}}</span>
-        <span class="badge bg-primary mr-1">{{pais.translations['fra'].official}}</span>
-        <span class="badge bg-primary mr-1">{{pais.translations['ita'].official}}</span>
-        <span class="badge bg-primary mr-1">{{pais.translations['deu'].official}}</span>
-        <span class="badge bg-primary mr-1">{{pais.translations['hun'].official}}</span>
+        <span class="badge bg-primary mr-1 animate__heartBeat">{{pais.translations['ara'].official}}</span>
+        <span class="badge bg-primary mr-1 animate__heartBeat">{{pais.translations['spa'].official}}</span>
+        <span class="badge bg-primary mr-1 animate__heartBeat">{{pais.translations['fra'].official}}</span>
+        <span class="badge bg-primary mr-1 animate__heartBeat">{{pais.translations['ita'].official}}</span>
+        <span class="badge bg-primary mr-1 animate__heartBeat">{{pais.translations['deu'].official}}</span>
+        <span class="badge bg-primary mr-1 animate__heartBeat">{{pais.translations['hun'].official}}</span>
       </div>
     </div>
+
 
 
 </ng-template>
